Description du projet, début.

--- a/src/doc/avancement/CR_20180215.tex
+++ b/src/doc/avancement/CR_20180215.tex
@@ -67,7 +67,7 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
 
 \section{Bonnes pratiques}
 
-\section{Ordre du jour de la procghaine réunion}
+\section{Ordre du jour de la réunion suivante}
 
 \label{LastPage}
 \end{document}
