Début de rédaction de l'analyse des exigences.

--- a/src/doc/avancement/CR_20180215.tex
+++ b/src/doc/avancement/CR_20180215.tex
@@ -10,16 +10,12 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
 \end{center}
 
 \small
-
-\textbf{Du :} 15/02/2018 à 20h
-
-\textbf{Objet :} Avancement projet ARROSAGE
-
-\textbf{Présents:} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Jean-Félix BENITEZ
-
-\textbf{Absent :} Personne
-
-\textbf{Diffusion :} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Jean-Félix BENITEZ
+\noindent
+\textbf{Du :} 15/02/2018 à 20h \\
+\textbf{Objet :} Avancement projet ARROSAGE \\
+\textbf{Présents:} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Jean-Félix BENITEZ \\
+\textbf{Absent :} Personne \\
+\textbf{Diffusion :} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Jean-Félix BENITEZ\\
 \normalsize
 
 \hrulefill
@@ -31,6 +27,9 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
   \begin{itemize}
   \item Chacun note son travail: Date, Temps passé (en heures et 1/10 d'heures), Sujet traité
   \item Mise en place d'un planning (activités et réunions)
+  \item Gantt ?
+  \item partage du problème
+  \item répartition des tâches pour l'analyse contextuelle (note de tout ce qu'il nous passe par la tête)
   \item 2 Réunions hebdomadaires ?
     \begin{itemize}
     \item mercredi 20h ? (17h les semaines de cour)
@@ -42,7 +41,7 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
   \item[Versioning] Git, GitHub !
   \item[EDI] Eclipse ?
   \item[Documentation] Latex ?
-  \item[Modélisation] UMLlet, Entreprise Architect, ... ?
+  \item[Modélisation] UMLet, Entreprise Architect, ... ?
   \item[Échange de fichiers] Dropbox ?
   \end{description}
 \item Bonnes pratiques
@@ -56,7 +55,9 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
   \item Trello
     \begin{itemize}
     \item toujours mettre une date "échéance" même à posteriori
-    \item ne pas oublier d'indiquer la durée effective de la tâche
+    \item ne pas oublier d'indiquer la durée effective de la tâche (unité)
+    \item cocher quand done + déplacement dans la bonne colonne
+    \item méthode de suivi de liste
     \end{itemize}
   \end{itemize}
 \end{itemize}
