--- a/src/doc/rapport/B_AnalyseExigences/AnalyseExigences.tex
+++ b/src/doc/rapport/B_AnalyseExigences/AnalyseExigences.tex
@@ -1,8 +1,18 @@
 %-*- coding: utf-8 -*-
 \textcolor[RGB]{46, 116, 181}{\chapter{Analyse des exigences}}
 \section{Parties prenantes}
+\begin{description}
+\item[Participantes:] Jardinier, pépiniériste, horticulteur.
+\item[Concernées:] ?
+\item[Impactées:] Visiteurs, clients.
+\end{description}
 
 \section{Besoins}
+\begin{enumerate}
+\item Pouvoir faire un arrosage spécifique à chaque catégorie de plantes; voire à chaque plante.
+\item Conditionner l'arrosage aux variations climatiques.
+\item Planifier les arrosages, leurs périodicité.
+\end{enumerate}
 
 \section{Exigences}
 
