--- a/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
+++ b/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
@@ -3,10 +3,10 @@
 L'arrosage d'un jardin ou de plantes dans un espace de vente est une tâche qui doit être faite quotidiennement du printemps à l'automne.
 Quand elle n'est pas faite manuellement, c'est un réseau de tuyaux d'arrosages proportionnel au nombre de plantes qui est mis en oeuvre.
 Ce réseau doit être modifié à chaque fois que l'on déplace 1 ou plusieurs plantes. Il doit être vérifié et remis en état à chaque début de saison.
-Le système proposé ici permet l'arrosage des plantes de la même façon que le ferait un être humain.
+Le système proposé ici permet l'arrosage des plantes de la même façon que le ferait un être humain; sans réseau de tuyaux.
 
 \section{Finalité}
-La finalité du système d'arrosage est de permettre l'irrigation de plantes partout où c'est nécessaire.
+La finalité du système d'arrosage est de veiller à la bonne santé des plantes partout où c'est nécessaire.
 
 \section{Conceptualisation}
 Les missions du système d'arrosage sont:
