Rédaction du compte rendu de la réunion de ce jour.

--- a/src/doc/avancement/CR_20180215.tex
+++ b/src/doc/avancement/CR_20180215.tex
@@ -13,9 +13,9 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
 \noindent
 \textbf{Du :} 15/02/2018 à 20h \\
 \textbf{Objet :} Avancement projet ARROSAGE \\
-\textbf{Présents:} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Jean-Félix BENITEZ \\
+\textbf{Présents:} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Nicolas SYMPHORIEN, Jean-Félix BENITEZ \\
 \textbf{Absent :} Personne \\
-\textbf{Diffusion :} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Jean-Félix BENITEZ\\
+\textbf{Diffusion :} Samir HADJOUTRIOS, Elzbieta IGUAL, Jérôme GARCIA, Nicolas SYMPHORIEN, Jean-Félix BENITEZ\\
 \normalsize
 
 \hrulefill
@@ -35,6 +35,7 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
     \item mercredi 20h ? (17h les semaines de cour)
     \item dimanche 20h ?
     \end{itemize}
+  \item Alternative à Skype, trop invasive avec hotmail.
   \end{itemize}
 \item Usine logicielle
   \begin{description}
@@ -42,7 +43,7 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
   \item[EDI] Eclipse ?
   \item[Documentation] Latex ?
   \item[Modélisation] UMLet, Entreprise Architect, ... ?
-  \item[Échange de fichiers] Dropbox ?
+  \item[Échange de fichiers] Google doc, Dropbox ?
   \end{description}
 \item Bonnes pratiques
   \begin{itemize}
@@ -63,12 +64,43 @@ COMPTE RENDU DE TÉLÉCONFÉRENCE % RÉUNION
 \end{itemize}
 
 \section{Organisation}
+\noindent
+\emph{Nom du projet}: \textbf{Smart Water}\\
+\emph{Chacun note son travail}: Nous avons convenu de noter les temps dans Trello, et de les reporter dans un fichier de synthèse sous Google Drive.
+Nous devrons veiller à ce que les noms des tâches dans Trello et sous Google Drive reste les mêmes.\\
+\emph{Mise en place d'un planning}: Nous avons convenus de 2 réunions hebdomadaires:
+\begin{enumerate}
+\item mercredi 20h (17h les semaines de cours)
+\item dimanche 20h
+\end{enumerate}
+\emph{Gantt}: Nous avons convenu d'utiliser un outil simple, de manière à être aussi efficace que possible.
+Dans ce cadre \href{http://www.projectlibre.com}{ProjectLibre} est un bon candidat.\\
+\emph{Partage du problème / Répartition des tâches pour l'analyse contextuelle}: Nous avons convenu qu'il n'y avait pas de tâche à partager à ce sujet. L'analyse contextuelle doit être faite ensemble, directement dans le début de rapport présent sous GitHub, et / ou par échange de courriel. Chacun notera sa contribution dans le rapport avec une couleur différente:
+  \begin{description}
+  \item[Samir] en vert
+  \item[Jean-Félix] en bleu
+  \item[Ela] en ?
+  \item[Jérôme] en ?
+  \item[Nicolas] en ?
+  \end{description}
+\emph{Alternative à Skype}: Sujet abandonné, ce n'est plus un problème.
 
 \section{Usine logicielle}
+  \begin{description}
+  \item[Versioning] Git, GitHub !
+  \item[EDI] à évaluer plus tard.
+  \item[Documentation] Latex !
+  \item[Modélisation] Essayer \emph{Modelio}, voir aussi \emph{Draw.io}.
+  \item[Échange de fichiers] Google doc !
+  \end{description}
 
 \section{Bonnes pratiques}
+Nous sommes d'accord sur ces bonnes pratiques à avoir.
+Notamment que les ordres du jours des réunions doivent être établis très tôt de manière à ce que chacun puisse faire le travail qui luis est demandé pour la réunion suivante.
 
 \section{Ordre du jour de la réunion suivante}
+La prochaine réunion aura lieu Dimanche 18 février à 20h par Skype.
+Nous avons convenu que nous réglerions les derniers détails du travail sur l'analyse contextuelle que nous allons faire pour cette réunion.
 
 \label{LastPage}
 \end{document}
