Ajout de macros afin d'identifier la contribution de chacun dans le rapport.

--- a/src/doc/rapport/0_0_preambule/preambule.tex
+++ b/src/doc/rapport/0_0_preambule/preambule.tex
@@ -86,3 +86,9 @@
 
 \usepackage{longtable}
 \setlongtables
+
+\newcommand{\samir}[1]{\textcolor{green}{#1}}
+\newcommand{\jeanfelix}[1]{\textcolor{blue}{#1}}
+\newcommand{\jerome}[1]{\textcolor{orange}{#1}}
+\newcommand{\ela}[1]{\textcolor{pink}{#1}}
+\newcommand{\nicolas}[1]{\textcolor{purple}{#1}}
