--- a/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
+++ b/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
@@ -5,6 +5,12 @@ Quand elle n'est pas faite manuellement, c'est un réseau de tuyaux d'arrosages 
 Ce réseau doit être modifié à chaque fois que l'on déplace 1 ou plusieurs plantes. Il doit être vérifié et remis en état à chaque début de saison.
 Le système proposé ici permet l'arrosage des plantes de la même façon que le ferait un être humain; sans réseau de tuyaux.
 
+\jeanfelix{Contribution de Jean-Félix.}
+\samir{Contribution de Samir.}
+\jerome{Contribution de Jérôme.}
+\ela{Contribution de Ela.}
+\nicolas{Contribution de Nicolas.}
+
 \section{Finalité}
 La finalité du système d'arrosage est de veiller à la bonne santé des plantes partout où c'est nécessaire.
 
