Mise à jour des exigences, du contexte et des besoins

--- a/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
+++ b/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
@@ -5,18 +5,36 @@ Quand elle n'est pas faite manuellement, c'est un réseau de tuyaux d'arrosages 
 Ce réseau doit être modifié à chaque fois que l'on déplace 1 ou plusieurs plantes. Il doit être vérifié et remis en état à chaque début de saison.
 Le système proposé ici permet l'arrosage des plantes de la même façon que le ferait un être humain; sans réseau de tuyaux.
 
+\jerome{\chapter{Problème} 
+Le réseau de tuyaux doit être entretenu impose des coûts proportionnels à sa taille. 
+Cet entretien doit être fait plusieurs fois par semaine, et l'arrosage des plantes efectué quotidiennement. Il faut donc embaucher du personnel qualifié 
+pour répondre au problème du temps qui, là aussi, est proportionnel à la taille de la pépinière ou du jardin. }
+
 \jeanfelix{Contribution de Jean-Félix.}
+
 \samir{Contribution de Samir.}
+
 \jerome{Contribution de Jérôme.}
+
 \ela{Contribution de Ela.}
+
 \nicolas{Contribution de Nicolas.}
 
 \section{Finalité}
 La finalité du système d'arrosage est de veiller à la bonne santé des plantes partout où c'est nécessaire.
+
+\jerome{
+Le système proposé contribue à l'entretien des espaces privés et au développement de la faune et de la flore.}
 
 \section{Conceptualisation}
 Les missions du système d'arrosage sont:
 \begin{itemize}
 \item Arroser les plantes aussi souvent que nécessaire.
 \item Détecter la présence d'anomalies: parasites, maladies.
+
+\jerome{
+\item Arrosage automatique des pépinières et jardins
+\item Parcourir une zone non cartographiée
+\item Détecter et alerter les problèmes techniques liés au système}
+
 \end{itemize}
