--- a/src/doc/rapport/B_AnalyseExigences/AnalyseExigences.tex
+++ b/src/doc/rapport/B_AnalyseExigences/AnalyseExigences.tex
@@ -12,6 +12,27 @@
 \item Pouvoir faire un arrosage spécifique à chaque catégorie de plantes; voire à chaque plante.
 \item Conditionner l'arrosage aux variations climatiques.
 \item Planifier les arrosages, leurs périodicité.
+
+%%%%%%%%%%%%%%%%%%%%%%% A EFFACER %%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\jerome{
+\\Rappel sur l'expression d'un besoin : \\
+"\textbf{en tant que} \emph{bidule}\textbf{, je veux que} \emph{mon système} \textbf{soit capable de faire} \emph{ceci.}"
+}
+%%%%%%%%%%%%%%%%%%%%%%% A EFFACER %%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\jerome{
+\item En tant que Utilisateur, je veux que mon système soit capable de récupérer la date du précédent arrosage et la date du prochain arrosage d'une zone.
+\item En tant que Utilisateur, je veux que mon système soit capable d'effectuer ses déplacements automatiquement et manuellement.
+\item En tant que Utilisateur, je veux que mon système soit capable d'effectuer l'arrosage automatiquement et manuellement.
+\item En tant que Utilisateur, je veux que mon système soit capable de récupérer les informations relatives aux plantes de la zones (taux d'humidités, quantité d'eau nécessaire...).
+\item En tant que Utilisateur, je veux que mon système soit capable de parcourir la pépinière|le jardin jusqu'à la zone à arroser.
+\item En tant que Utilisateur, je veux que mon système soit capable de remplir son réservoir d'eau.
+\item En tant que Utilisateur, je veux que mon système soit capable de déverser la quantité d'au nécessaire à la zone.
+\item En tant que Utilisateur, je veux que mon système soit capable d'éditer un rapport concernant l'arrosage de la pépinière|du jardin.
+\item En tant que Utilisateur, je veux que mon système soit capable de lire des puces contenant les informations relatives à une plante à proximité}
+
+
 \end{enumerate}
 
 \section{Exigences}
