MAJ_samir_probleme_finalite_mission

--- a/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
+++ b/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
@@ -10,9 +10,15 @@ Le réseau de tuyaux doit être entretenu impose des coûts proportionnels à sa
 Cet entretien doit être fait plusieurs fois par semaine, et l'arrosage des plantes efectué quotidiennement. Il faut donc embaucher du personnel qualifié 
 pour répondre au problème du temps qui, là aussi, est proportionnel à la taille de la pépinière ou du jardin. }
 
-\jeanfelix{Contribution de Jean-Félix.}
+\samir
+{
+L'arrosage de plantes dans un jardin est une tâche à réaliser quotidiennement du printemps à l'automne.
+Quand elle n'est pas effectuée par un opérateur humain, c'est un réseau de tuyaux et de jets qui s'en charge.
+Dans le cas premier cas, le problème tient au coût engendré par le temps conséquent passé à arroser.
+Dans le second cas, le problème tient à la plus ou moins grande complexité de sa mise en place, son entretien régulier sous l'action des éléments, son réaménagement obligatoire induite par les déplacements de pots ou la croissance des plantes et enfin, le coté peu esthétique de ce type d'installation.
+}
 
-\samir{Contribution de Samir.}
+\jeanfelix{Contribution de Jean-Félix.}
 
 \jerome{Contribution de Jérôme.}
 
@@ -26,15 +32,26 @@ La finalité du système d'arrosage est de veiller à la bonne santé des plante
 \jerome{
 Le système proposé contribue à l'entretien des espaces privés et au développement de la faune et de la flore.}
 
+\samir
+{
+Notre système sera chargé d'arroser les plantes en pots ou en terre des jardins et des pépinières, selon leurs besoins. Il devra répondre aux problèmes de coûts, de complexité, d'entretien et d'inesthétisme des solutions existantes.
+}
+
 \section{Conceptualisation}
 Les missions du système d'arrosage sont:
 \begin{itemize}
 \item Arroser les plantes aussi souvent que nécessaire.
 \item Détecter la présence d'anomalies: parasites, maladies.
+\end{itemize}
 
 \jerome{
 \item Arrosage automatique des pépinières et jardins
 \item Parcourir une zone non cartographiée
 \item Détecter et alerter les problèmes techniques liés au système}
 
-\end{itemize}
+\samir
+{
+La mission unique du système consiste à arroser les plantes en pots ou en terre des jardins et des pépinières, selon leurs besoins.
+}
+
+
