Correction liste itemize et reformulation des exigences.

--- a/src/doc/rapport/0_0_preambule/preambule.tex
+++ b/src/doc/rapport/0_0_preambule/preambule.tex
@@ -87,7 +87,7 @@
 \usepackage{longtable}
 \setlongtables
 
-\newcommand{\samir}[1]{\textcolor{green}{#1}}
+\newcommand{\samir}[1]{\textcolor{green}{#1}} % olive
 \newcommand{\jeanfelix}[1]{\textcolor{blue}{#1}}
 \newcommand{\jerome}[1]{\textcolor{orange}{#1}}
 \newcommand{\ela}[1]{\textcolor{pink}{#1}}
