--- a/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
+++ b/src/doc/rapport/A_AnalyseContextuelle/AnalyseContextuelle.tex
@@ -5,7 +5,7 @@ Quand elle n'est pas faite manuellement, c'est un réseau de tuyaux d'arrosages 
 Ce réseau doit être modifié à chaque fois que l'on déplace 1 ou plusieurs plantes. Il doit être vérifié et remis en état à chaque début de saison.
 Le système proposé ici permet l'arrosage des plantes de la même façon que le ferait un être humain; sans réseau de tuyaux.
 
-\jerome{\chapter{Problème} 
+\jerome{\section{Problème} 
 Le réseau de tuyaux doit être entretenu impose des coûts proportionnels à sa taille. 
 Cet entretien doit être fait plusieurs fois par semaine, et l'arrosage des plantes efectué quotidiennement. Il faut donc embaucher du personnel qualifié 
 pour répondre au problème du temps qui, là aussi, est proportionnel à la taille de la pépinière ou du jardin. }
@@ -45,9 +45,12 @@ Les missions du système d'arrosage sont:
 \end{itemize}
 
 \jerome{
+\begin{itemize}
 \item Arrosage automatique des pépinières et jardins
 \item Parcourir une zone non cartographiée
-\item Détecter et alerter les problèmes techniques liés au système}
+\item Détecter et alerter les problèmes techniques liés au système
+\end{itemize}
+}
 
 \samir
 {
