--- a/src/doc/rapport/B_AnalyseExigences/AnalyseExigences.tex
+++ b/src/doc/rapport/B_AnalyseExigences/AnalyseExigences.tex
@@ -9,10 +9,13 @@
 
 \section{Besoins}
 \begin{enumerate}
-\item Pouvoir faire un arrosage spécifique à chaque catégorie de plantes; voire à chaque plante.
-\item Conditionner l'arrosage aux variations climatiques.
-\item Planifier les arrosages, leurs périodicité.
-
+\addtocounter{enumi}{-1} % bidouille pour que le premier item soit numéroté 1
+\item %la compilation ne ce  fait pas sans cet item !...
+\jeanfelix{
+\item En tant qu'utilisateur, je veux que mon système soit capable de faire un arrosage spécifique à chaque catégorie de plantes; voire à chaque plante.
+\item En tant qu'utilisateur, je veux que mon système soit capable de conditionner l'arrosage aux variations climatiques.
+\item En tant qu'utilisateur, je veux que mon système soit capable de planifier les arrosages, leurs périodicité.
+}
 %%%%%%%%%%%%%%%%%%%%%%% A EFFACER %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \jerome{
