--- a/src/doc/rapport/0_0_preambule/preambule.tex
+++ b/src/doc/rapport/0_0_preambule/preambule.tex
@@ -39,7 +39,7 @@
 %%%%%%%%%%%%%%%%%%%style main%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\fancypagestyle{main}{%
 		\fancyhf{}
-		\fancyhead[c]{\textbf{ARROSAGE -}}
+		\fancyhead[c]{\textbf{SMART WATER -}}
 		\fancyfoot[C]{Formation Ingénieur Informatique en alternance - Deuxième année}
 		\fancyfoot[RO,LE]{\textbf{CNAM}}%
   		\fancyfoot[LO,RE]{\textbf{\thepage/\pageref{LastPage}}}
@@ -50,7 +50,7 @@
 %%%%%%%%%%%%%%%%%%%style plain%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\fancypagestyle{plain}{%
 		\fancyhf{}
-		\fancyhead[c]{\textbf{ARROSAGE -}}
+		\fancyhead[c]{\textbf{SMART WATER -}}
 		\fancyfoot[C]{Formation Ingénieur Informatique en alternance - Deuxième année}
 		\fancyfoot[RO,LE]{\textbf{CNAM}}%
   		\fancyfoot[LO,RE]{\textbf{\thepage/\pageref{LastPage}}}
