--- a/src/doc/rapport/0_page-de-couverture/page-de-couverture.tex
+++ b/src/doc/rapport/0_page-de-couverture/page-de-couverture.tex
@@ -6,7 +6,7 @@
 
 \hrulefill
 \begin{center}\bfseries\Huge
-PROJET ARROSAGE
+PROJET SMART WATER
 \end{center}
 \hrulefill
 
@@ -27,6 +27,8 @@ Elzbieta IGUAL
 Jérôme GARCIA
 
 Jean-Félix BENITEZ
+
+Nicolas SYMPHORIEN
 \end{center}
 
 \vspace*{\stretch{2}}
