--- a/src/doc/avancement/CR_20180215.tex
+++ b/src/doc/avancement/CR_20180215.tex
@@ -79,9 +79,9 @@ Dans ce cadre \href{http://www.projectlibre.com}{ProjectLibre} est un bon candid
   \begin{description}
   \item[Samir] en vert
   \item[Jean-Félix] en bleu
-  \item[Ela] en ?
-  \item[Jérôme] en ?
-  \item[Nicolas] en ?
+  \item[Ela] en rose
+  \item[Jérôme] en orange
+  \item[Nicolas] en pourpre
   \end{description}
 \emph{Alternative à Skype}: Sujet abandonné, ce n'est plus un problème.
 
